# simple-logger

./: CMakeLists.txt  README.md
include/slogger/: ClockRawTimer.hpp  DefaultClockTimer.hpp  DirectConsoleLogger.hpp  Error.hpp  ILogger.hpp  ITimer.hpp  Logger.hpp  Ring.hpp  ShellUtils.hpp  StringUtils.hpp  ThreadedLogger.hpp  TimeUtils.hpp
src/: Logger.cpp  ShellUtils.cpp  StringUtils.cpp  TimeUtils.cpp
tests/: CMakeLists.txt  slogger_mocks.hpp  test_stringutils.cpp  test_tai.cpp
